--- a/pedestrian_test.ipynb
+++ b/pedestrian_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "69233ed0",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,7 @@
     "from jax import random\n",
     "from jax import jit\n",
     "from jax import vmap\n",
+    "from jax import grad\n",
     "from jax import lax\n",
     "from jax import config\n",
     "config.update(\"jax_enable_x64\", True)\n",
@@ -32,9 +33,10 @@
     "\n",
     "\n",
     "from functools import partial\n",
-    "from simulator.utils import angle_correct, normal, align_tot, general_force_generator_TEST_1, general_force_generator_TEST_2\n",
+    "from simulator.utils import angle_correct, normal, general_force_generator_TEST_1, general_force_generator_TEST_2, general_force_generator_TEST_3, general_force_generator_TEST_4\n",
     "from simulator.render import render\n",
-    "from simulator.utils import ttc_potential_tot, time_to_collide, ttc_tot, ttc_potential_fn, ttc_force_tot, wall_energy, normalize_cap, wall_energy_tot\n",
+    "from simulator.utils import time_to_collide, ttc_tot, ttc_potential_fn, wall_energy, normalize_cap\n",
+    "from simulator.force import goal_velocity_force_tot\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "class PedestrianState(namedtuple(\"PedestrianState\", ['position', 'velocity', 'radius', 'goal_velocity'])):\n",
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "9e348aad",
    "metadata": {},
    "outputs": [
@@ -202,8 +204,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_1_init_runtime = 4.291534423828125e-06\n",
-      "test_2_init_runtime = 0.0023763179779052734\n"
+      "test_1_init_runtime = 9.5367431640625e-07\n",
+      "test_2_init_runtime = 0.10322093963623047\n",
+      "test_3_init_runtime = 9.5367431640625e-07\n",
+      "test_4_init_runtime = 2.1457672119140625e-06\n"
      ]
     }
    ],
@@ -218,7 +222,9 @@
     "])\n",
     "\n",
     "force1 = general_force_generator_TEST_1(paral, perpen, 10., 10.)\n",
-    "force2 = general_force_generator_TEST_2(paral, perpen, 10., 10.)"
+    "force2 = general_force_generator_TEST_2(paral, perpen, 10., 10.)\n",
+    "force3 = general_force_generator_TEST_3(paral, perpen, 10., 10.)\n",
+    "force4 = general_force_generator_TEST_4(paral, perpen, 10., 10.)"
    ]
   },
   {
@@ -231,9 +237,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_1_runtime = 0.042883872985839844\n",
+      "test_1_runtime = 0.044194936752319336\n",
       "[-0.57126507  0.        ]\n",
-      "test_2_runtime = 0.0419001579284668\n",
+      "test_2_runtime = 0.042388916015625\n",
+      "[-0.57126507  0.        ]\n",
+      "test_3_runtime = 0.31406497955322266\n",
+      "[-0.57126507  0.        ]\n",
+      "test_4_runtime = 0.3099660873413086\n",
       "[-0.57126507  0.        ]\n"
      ]
     }
@@ -243,7 +253,9 @@
     "V_1 = np.array([1.0, 0.0])\n",
     "V_2 = np.array([2.0, 0.0])\n",
     "print(force1(dpos, V_1, V_2))\n",
-    "print(force2(dpos, V_1, V_2))"
+    "print(force2(dpos, V_1, V_2))\n",
+    "print(force3(dpos, V_1, V_2))\n",
+    "print(force4(dpos, V_1, V_2))"
    ]
   },
   {
@@ -269,11 +281,534 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "64409250",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[  1   2   3   4   5   6]\n",
+      "  [  2   4   6   8  10  12]\n",
+      "  [  3   6   9  12  15  18]\n",
+      "  [  4   8  12  16  20  24]\n",
+      "  [  5  10  15  20  25  30]\n",
+      "  [  6  12  18  24  30  36]]\n",
+      "\n",
+      " [[  2   4   6   8  10  12]\n",
+      "  [  4   8  12  16  20  24]\n",
+      "  [  6  12  18  24  30  36]\n",
+      "  [  8  16  24  32  40  48]\n",
+      "  [ 10  20  30  40  50  60]\n",
+      "  [ 12  24  36  48  60  72]]\n",
+      "\n",
+      " [[  3   6   9  12  15  18]\n",
+      "  [  6  12  18  24  30  36]\n",
+      "  [  9  18  27  36  45  54]\n",
+      "  [ 12  24  36  48  60  72]\n",
+      "  [ 15  30  45  60  75  90]\n",
+      "  [ 18  36  54  72  90 108]]\n",
+      "\n",
+      " [[  4   8  12  16  20  24]\n",
+      "  [  8  16  24  32  40  48]\n",
+      "  [ 12  24  36  48  60  72]\n",
+      "  [ 16  32  48  64  80  96]\n",
+      "  [ 20  40  60  80 100 120]\n",
+      "  [ 24  48  72  96 120 144]]\n",
+      "\n",
+      " [[  5  10  15  20  25  30]\n",
+      "  [ 10  20  30  40  50  60]\n",
+      "  [ 15  30  45  60  75  90]\n",
+      "  [ 20  40  60  80 100 120]\n",
+      "  [ 25  50  75 100 125 150]\n",
+      "  [ 30  60  90 120 150 180]]\n",
+      "\n",
+      " [[  6  12  18  24  30  36]\n",
+      "  [ 12  24  36  48  60  72]\n",
+      "  [ 18  36  54  72  90 108]\n",
+      "  [ 24  48  72  96 120 144]\n",
+      "  [ 30  60  90 120 150 180]\n",
+      "  [ 36  72 108 144 180 216]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3, 4, 5, 6])\n",
+    "A = np.tensordot(np.tensordot(a, a, axes=0), a, axes=0)\n",
+    "\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1b173403",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Traced<~int64[]>with<DynamicJaxprTrace>]\n",
+      "489\n"
+     ]
+    }
+   ],
+   "source": [
+    "saver = []\n",
+    "\n",
+    "@jit\n",
+    "def fn(i, x):\n",
+    "    ans = i + x\n",
+    "    saver.append(ans)\n",
+    "    return ans\n",
+    "\n",
+    "fin_ans = 0\n",
+    "fin_ans = fn(69, fin_ans)\n",
+    "fin_ans = fn(420, fin_ans)\n",
+    "\n",
+    "# fin_ans = lax.fori_loop(0, 10, fn, 0)\n",
+    "\n",
+    "print(saver)\n",
+    "print(fin_ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e66ba080",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([0., 0., 0., 0., 0., 0., 0.], dtype=float64)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c21a68f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([0, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(False, np.array([1, 2, 3]), np.array([0, 0, 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cdf5eb5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fn(*vars):\n",
+    "    return vars\n",
+    "\n",
+    "fn(1, 2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3ceace20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 2 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = {'a' : 3, 'b' : 2, 'c' : 5}\n",
+    "a, b, c = A.values()\n",
+    "print(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8a5d1bc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fn(vec_1, vec_2):\n",
+    "    return vec_1[0] - vec_2[0]\n",
+    "\n",
+    "print(grad(fn)(np.array([1., 69.]), np.array([1., 420.])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5a45a025",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Array(0, dtype=int64, weak_type=True), None)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fn(idx, x):\n",
+    "    return idx + 1, x\n",
+    "\n",
+    "lax.scan(fn, 0, length=-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "eb71afa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], dtype=int64)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fc57106e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-18.   0.]\n",
+      " [ -1.   4.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vel = np.array([[10., 0], [0.5, 0]])\n",
+    "# goal_speed = 1.\n",
+    "goal_speed = np.array([1., 2.])\n",
+    "goal_orientation = np.array([0., onp.pi / 2])\n",
+    "print(goal_velocity_force_tot(vel, goal_speed, goal_orientation))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7e265e9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.5 0.5]\n",
+      " [3.  3. ]\n",
+      " [7.  7. ]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Array([[0.        , 2.        ],\n",
+       "       [0.33333333, 0.66666667],\n",
+       "       [0.28571429, 0.42857143]], dtype=float64)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array(\n",
+    "    [[0, 1],\n",
+    "     [1, 2],\n",
+    "     [2, 3]]\n",
+    ")\n",
+    "B = np.array(\n",
+    "    [0.5, 3, 7]\n",
+    ")\n",
+    "B = np.stack([B, B], axis=1)\n",
+    "print(B)\n",
+    "A / B\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c53f06dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[0.5, 3. ],\n",
+       "       [0.5, 3. ],\n",
+       "       [0.5, 3. ],\n",
+       "       [0.5, 3. ],\n",
+       "       [0.5, 3. ],\n",
+       "       [0.5, 3. ],\n",
+       "       [0.5, 3. ],\n",
+       "       [0.5, 3. ],\n",
+       "       [0.5, 3. ],\n",
+       "       [0.5, 3. ]], dtype=float64)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([B] * 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e102fda7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([-3.13159299,  0.55859932], dtype=float64)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arctan2(np.array([-0.01, 0.5]), np.array([-1, 0.8]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9ba77dac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0]\n",
+      " [0 1]\n",
+      " [0 1]]\n",
+      "[[1 0]\n",
+      " [1 0]\n",
+      " [1 0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Array([[ True,  True],\n",
+       "       [False, False],\n",
+       "       [False, False]], dtype=bool)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goals = np.array([[0, 1], [1, 0]])\n",
+    "\n",
+    "@vmap\n",
+    "def cond_fn_0(pos, goal):\n",
+    "    disp_to_goal = goal - pos\n",
+    "    dist_to_goal = np.linalg.norm(disp_to_goal)\n",
+    "    return np.where(dist_to_goal > 0.1, goals[0], goals[1])\n",
+    "\n",
+    "@vmap\n",
+    "def cond_fn_1(pos, goal):\n",
+    "    return goals[1]\n",
+    "\n",
+    "\n",
+    "\n",
+    "pos = np.array([[0, 0],  [0, 1], [1, 0]])\n",
+    "goal = np.array([[0, 0.1], [0.1, 0], [0, 69]])\n",
+    "print(cond_fn_0(pos, goal))\n",
+    "print(cond_fn_1(pos, goal))\n",
+    "\n",
+    "cond = vmap(np.array_equal, (0, None))(pos, np.array([0, 0]))\n",
+    "np.stack((cond, cond), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "65812a8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(9, -1, -1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "332112c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[1, 2],\n",
+       "       [2, 3],\n",
+       "       [3, 4]], dtype=int64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1, 2]) + np.array([[0, 0], [1, 1], [2, 2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90ffafaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[2, 3],\n",
+       "       [2, 3],\n",
+       "       [2, 3],\n",
+       "       [2, 3],\n",
+       "       [4, 5],\n",
+       "       [4, 5],\n",
+       "       [4, 5],\n",
+       "       [2, 3],\n",
+       "       [2, 3],\n",
+       "       [4, 5],\n",
+       "       [4, 5],\n",
+       "       [0, 1],\n",
+       "       [2, 3],\n",
+       "       [4, 5],\n",
+       "       [4, 5],\n",
+       "       [2, 3],\n",
+       "       [4, 5],\n",
+       "       [0, 1],\n",
+       "       [2, 3],\n",
+       "       [4, 5]], dtype=int64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key = random.PRNGKey(69)\n",
+    "random.choice(key, np.array([[0, 1], [2, 3], [4, 5]]), (20,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b51da8c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(1.10714872, dtype=float64, weak_type=True)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.atan2(10, 5)"
+   ]
   }
  ],
  "metadata": {
